# stunning-octo-chainsaw

./: CLAUDE.md  Dockerfile  MANIFEST.in  ONBOARDING.md  README.md  customer360.db  docker-compose.yml  iris_prediction.py  main.py  project_structure.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
app/: __init__.py
app/adapters/: __init__.py
app/api/: __init__.py  routes.py
app/common/: __init__.py
app/config/: config_loader.py  data_source_config_manager.py  endpoint_config_manager.py
app/orchestration/: data_orchestrator.py  execution_tracker.py  orchestration_interfaces.py  request_processor.py  response_assembler.py
config/: README.md  config.yaml  database.yaml
config/domains/: README.md  customers.yaml  iris_example.yaml  model_scoring_churn_pred.yaml  model_scoring_credit_risk.yaml
config/integrations/: api_sources.yaml  feast_config.yaml  ml_config.yaml  mock_services.yaml
docs/: library_usage.md  model_loading.md
docs/api/: iris_direct_api.md
docs/architecture/: endpoint_configuration.md  orchestrator_api.md
example/: README-IRIS-CLI.md  README.md  api_client.py  create_model.py  database_extensions.py  database_model.py  iris_example.db  iris_model_server.py  iris_prediction.py  run_example.py  run_iris_example.py  start_orchestrator.py
example/config/: README.md  config.yaml  database.yaml
example/iris_example/: README.md  (+3 more)
examples/: README.md  model_scoring_client.py
orchestrator_api_service/: __init__.py  cli.py
orkestra/: __init__.py  cli.py
scripts/: generate_specs.py  stop_service.py
tests/: conftest.py
(+105 files in other folders)
